# bdOS

./: CMakeLists.txt  README.md  main.c
aispecs/aicommos/: aicommos.docx
bootman/: concept.docx  concept.txt  ~$oncept.docx
contnrz/: Concept.txt  concept.docx
documents/BIOS/: Functions.docx
documents/BootLoader/: Bootloader.docx
documents/Essential system processes and services/: Essential system processes and services.docx
documents/Kernel/: Kernel.docx  ~$Kernel.docx
kernel/docs/: kernel.docx  key considerations.docx
kernel/src/hal/: about_hal.docx
kernel/src/hal/core/: about core.docx
kernel/src/hal/core/hal_core/: about_hal_core.docx  hal_core_api.docx  hal_core_config.docx  hal_core_init.docx  hal_core_interrupts.docx  hal_core_pm.docx  hal_core_security.docx  hal_core_virtualization.docx  ~$l_core_api.docx
kernel/src/hal/core/hal_driver_manager/: about_hal_driver_manager.docx  hal_driver_ai.docx  hal_driver_loader.docx  hal_driver_registry.docx  hal_driver_security.docx  hal_driver_unloader.docx  hal_driver_update.docx  hal_driver_virtualization.docx
kernel/src/hal/core/hal_virtualization/: about_hal_virtualization.docx  hal_hypervisor_bridge.docx  hal_io_virtualizer.docx  hal_memory_partition.docx  hal_security_enclave.docx  hal_vcpu_manager.docx  hal_vm_migrator.docx
kernel/src/hal/mmp/: about_mmp.docx
kernel/src/hal/mmp/hal_hbm/: about hal_hbm.docx
kernel/src/hal/mmp/hal_hbm/hal_hbm_allocator/: about hal_hbm_allocator.docx
kernel/src/hal/mmp/hal_hbm/hal_hbm_dma/: About hal_hbm_dma.docx
kernel/src/hal/mmp/hal_hbm/hal_hbm_ecc/: About hal_hbm_ecc.docx
kernel/src/hal/mmp/hal_hbm/hal_hbm_interleaver/: About hal_hbm_interleaver.docx
kernel/src/hal/mmp/hal_hbm/hal_hbm_power/: About hal_hbm_power.docx
kernel/src/hal/mmp/hal_hbm/hal_hbm_scheduler/: About_hal_hbm_scheduler.docx
kernel/src/hal/pap/: about_pap.docx
kernel/src/hal/pio/: about_pio.docx
kernel/src/hal/secenv/: about_secenv.docx
tests/: CMakeLists.txt  test_kernel.c
